--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 mysql-connector-python==9.4.0
 packaging==25.0
+psycopg2-binary==2.9.10
 Werkzeug==3.1.3
 zipp==3.23.0
